RF + test updates